--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   },
   "homepage": "https://github.com/okdemilgin/backendchallenge#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "helmet": "^7.0.0",
     "knex": "^2.5.1",
+    "morgan": "^1.10.0",
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
